--- a/website/docs/architecture.mdx
+++ b/website/docs/architecture.mdx
@@ -1,25 +1,24 @@
 ---
 sidebar_position: 2
 ---
-import BrowserOnly from '@docusaurus/BrowserOnly';
+
+import BrowserOnly from '@docusaurus/BrowserOnly'
 
 # Architecture
+
 ## Overview
 
 import FlowChart from '@site/src/components/architecture/FlowChart'
 
-<BrowserOnly>
-  {() => <FlowChart />}
-</BrowserOnly>
+<BrowserOnly>{() => <FlowChart />}</BrowserOnly>
 
 Discordeno have three main components/process, gateway, bot and rest. Websocket events from Discord, such as connecting, restarting, heartbeating, and transmitting websocket messages to Discord, are handled and maintained by the Gateway process. All Discord events are handled and converted by the Bot process, which also activates your code, such as the execute function upon message creation. All http requests to Discord, including proxying and ratelimiting, are handled by the Rest process.
 
 ## Gateway Process
+
 import FlowChart2 from '@site/src/components/architecture/FlowChart2'
 
-<BrowserOnly>
-  {() => <FlowChart2 />}
-</BrowserOnly>
+<BrowserOnly>{() => <FlowChart2 />}</BrowserOnly>
 
 The Gateway process have two part the gateway manager and the gateway [shard](https://discord.com/developers/docs/topics/gateway#sharding), the gateway manager oversees the gateway shard.
 
@@ -32,10 +31,15 @@ The gateway manager spawns the right amount of shard acording to data from disco
 Any event is passed to the handleMessage method by the gateway shard, which also establishes a websocket connection to Discord. The handleMessage method will examine the event and only deliver genuine events to the bot by intercepting and processing websocket-related events like hello, resume, heartbeat, and ready. You can modify the handleMessage to suit your needs, but it is not advised unless you are certain of your actions because the connection depends on it. After the function has finished processing the event, it will either pass the event directly (in the same process), via the rest api, a message queue, or another mechanism depending on the user's customization.
 
 ## Bot Process
+
 import FlowChart3 from '@site/src/components/architecture/FlowChart3'
 
 <BrowserOnly>
-  {() => <FlowChart3 handlerFilter={(handler) => handler.startsWith('handleChannel')}/>}
+  {() => (
+    <FlowChart3
+      handlerFilter={handler => handler.startsWith('handleChannel')}
+    />
+  )}
 </BrowserOnly>
 
 A simplified version of function used inside of the bot process, showing only the handlers, transformers and event related to channel event
