--- a/website/blog/changelogs/19.0.0.md
+++ b/website/blog/changelogs/19.0.0.md
@@ -10,6 +10,8 @@ date: 2023-02-28T23:07:48Z
 
 This is the changelog for Discordeno.
 
+<!-- truncate -->
+
 ## Description
 
 This version began with the simple intention of trying to solve the headache of Deno installation. For a long time now, I have been unable to code on discordeno because Deno would not upgrade on my system. This meant I was stuck using Deno 1.20 while the CI would be using the latest Deno version. When I would push code, it would break as the deno format and linters and checkers would be all different. As new features were added to Deno, I was unable to use them and it made it difficult. However, because of Github Codespaces I was able to code on it for a while. Once Github Codespaces began introducing limits, I could no longer use Deno anywhere. This meant Discordeno went unmaintained for quite a while. I tried to fix Deno on my system for weeks but had no luck. However, I was not willing to remove Deno because I wanted to support existing users. Once Deno released `npm` support, I knew it was time to begin migrating the code of our library to NodeJS.
